# SdlVulkan

./: .gitignore  CMakeLists.txt  build.gradle  validation_env.sh
VulkanSDK/1.2.189.0/android/lib/pkgconfig/: SPIRV-Tools-shared.pc  SPIRV-Tools.pc  vulkan.pc
VulkanSDK/1.2.189.0/win64/lib/: HLSL.lib  SPIRV-Tools-shared.lib  SPVRemapper.lib  glslang.lib  shaderc_shared.lib  shaderc_util.lib  spirv-cross-c-shared.lib  spirv-cross-c.lib  spirv-cross-reflect.lib
VulkanSDK/1.2.189.0/x86_64/lib/pkgconfig/: shaderc_combined.pc
app/: CMakeLists.txt  build.gradle
app/SDL2-2.0.16/: Android.mk  CMakeLists.txt
app/SDL2-2.0.16/include/: SDL_system.h
app/SDL2-2.0.16/src/dynapi/: SDL_dynapi_overrides.h  SDL_dynapi_procs.h
app/SDL2/SDL2-2.0.16/: Android.mk  CMakeLists.txt
app/SDL2/SDL2-2.0.16/include/: SDL_system.h
app/SDL2/SDL2-2.0.16/src/core/android/: SDL_android.c  SDL_android.h
app/SDL2/SDL2-2.0.16/src/dynapi/: SDL_dynapi_procs.h
app/SDL2/SDL2-2.0.16/src/hidapi/android/jni/: Android.mk
app/SDL2/SDL2-2.0.18/: Android.mk  CMakeLists.txt
app/SDL2/SDL2-2.0.18/include/: SDL_system.h
app/SDL2/SDL2-2.0.18/src/core/android/: SDL_android.c
app/SDL2/SDL2-2.0.18/src/dynapi/: SDL_dynapi_overrides.h  SDL_dynapi_procs.h
app/SDL2/SDL2_image-2.0.5/: Android.mk  CMakeLists.txt  Makefile  libtool  showimage
app/SDL2/SDL2_image-2.0.5/lib/x64/: libSDL2_image.la
app/SDL2/SDL2_ttf-2.0.15/: Android.mk  CMakeLists.txt
app/SDL2/SDL2_ttf-2.0.15/lib/x64/: libSDL2_ttf.la
app/SDL2_image-2.0.5/lib/x64/: libSDL2_image.lai  showimage
app/SDL2_ttf-2.0.15/lib/x64/: glfont  libSDL2_ttf.lai  showfont
app/VulkanSDK/1.2.189.0/android/lib/pkgconfig/: spirv-cross-c-shared.pc
app/VulkanSDK/1.2.189.0/win64/lib/: OGLCompiler.lib  SPIRV-Tools-lint.lib  glslang-default-resource-limits.lib  shaderc.lib  spirv-cross-cpp.lib  spirv-cross-util.lib
app/VulkanSDK/1.2.189.0/x86_64/lib/: libspirv-cross-c-shared.so.0.48.0
app/adreno/: INSTALL.txt  vkal_config.txt
app/assimp-5.0.1/: CMakeLists.txt
app/assimp-5.0.1/code/COB/: COBLoader.cpp
app/assimp-5.0.1/code/Importer/IFC/: IFCCurve.cpp
app/assimp-5.0.1/code/MDL/: MDLLoader.cpp
app/assimp-5.0.1/contrib/gtest/m4/: acx_pthread.m4
app/assimp-5.0.1/contrib/gtest/make/: Makefile
app/assimp-5.0.1/port/jassimp/: build.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: models-frag.spv  models-vert.spv  skybox-vert.spv
app/src/main/java/org/libsdl/app/: SDLActivity.java
app/src/main/java/sdl/vulkan/: MainActivity.java
assets/models/: rock.mtl
assets/shaders/: midpoint-vert.spv  models-frag.spv  models-memory-frag.spv  models-memory-vert.spv  normals-geom.spv
gradle/wrapper/: gradle-wrapper.properties
shaders/: compile.sh  midpoint.frag  midpoint.vert  models-memory.frag  models-memory.vert  models.frag  models.vert  normals.geom
src/: android.cpp  camera.cpp  components.cpp  desktop.cpp  engine.cpp  graphics.cpp  helper.cpp  imgui-pipeline.cpp  midpoint-pipeline.cpp  models-pipeline.cpp  models.cpp  pipeline.cpp  platform.cpp  renderer.cpp  shader.cpp  skybox-pipeline.cpp  threading.cpp
src/includes/: android.h  components.h  graphics.h  helper.h  logging.h  models.h  shared.h  threading.h  world.h
